base/gogs-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`gogs.anywhere.com`)
    kind: Rule
    services:
    - name: gogs
      port: 3000
    middlewares:
      - name: gogs-headers
